<resources>
    <!-- Strings activity_main -->
    <string name="app_name">NutriVida</string>
    <string name="title_aplication">Descubre tu nuevo tu</string>
    <string name="btn_singIn">Empezar ahora</string>
    <string name="btn_logIn">Ya tengo una cuenta? LogIn</string>
    <string name="text_createAccount">Crear cuenta</string>


    <!-- Strings activity_login -->
    <string name="banner">Regreso a la vida</string>
    <string name="custom_banner">Que gusto \n verte de nuevo!</string>
    <string name="lb_email">E-mail</string>
    <string name="lb_password">Password</string>
    <string name="btn_submit">Ingresar</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="btn_apple">Apple</string>
    <string name="default_web_client_id">727290360667-p7r9t3uglc183qtqlfn19mbsqmj8kk79.apps.googleusercontent.com</string>



    <!-- Strings activity_singin -->
    <string name="btn_goBack">back</string>
    <string name="user_image">user</string>
    <string name="lb_gender">Genero</string>
    <string name="chp_male">Masculino</string>
    <string name="chp_female">Femenino</string>
    <string name="chp_none">Ninguno</string>
    <string name="lb_name">Tu Nombre</string>
    <string name="txt_name">Introduce tu nombre</string>
    <string name="lb_age">Tu Edad</string>
    <string name="txt_age">Introduce tu edad</string>
    <string name="lb_weight">Tu Actividad Fisica</string>
    <string name="lb_trainingf">Entrena de 0-2 veces por semana</string>
    <string name="btn_next">Siguiente</string>

    <!-- Strings activity_secondform -->


    <!-- OPCIONES METAS -->
    <string-array name="goals">
        <item>Pérdida de peso</item>
        <item>Aumento de masa muscular</item>
        <item>Mejorar la salud cardiovascular</item>
        <item>Control de niveles de azúcar en la sangre</item>
        <item>Reducción del colesterol</item>
        <item>Mejorar la digestión</item>
        <item>Aumentar la energía</item>
        <item>Mejorar la piel</item>
        <item>Controlar la presión arterial</item>
        <item>Mejorar el bienestar mental</item>
    </string-array>


    <!-- OPCIONES CONDICIONES -->
    <string-array name="conditions">
        <!-- condiciones alimenticias -->
        <item>Intolerancia a la lactosa</item>
        <item>Alergia al gluten</item>
        <item>Alergia al marisco</item>
        <item>Enfermedad celiaca</item>
        <item>Alergia al huevo</item>
        <item>Alergia al mani</item>
        <item>INtolerancia a la fructosa</item>
        <item>Sindrome de intestino irritable</item>
        <item>Alergia a la soya</item>
        <item>Diabetes tipo 1 y 2</item>
        <item>Hypertension</item>
        <item>Gota</item>
        <item>Alergia al sesamo</item>
        <item>Alergia a las legumbres</item>
        <item>Enfermedad de Crohn</item>
        <item>Alergia a los sulfitos</item>
        <item>Anemia por deficiencia de hierro</item>
        <item>Hiperlipidemia</item>

        <!-- condiciones fisicas -->
        <item>Afasia</item>
        <item>Ataxia</item>
        <item>Abasia</item>
        <item>Distrofia muscular</item>
        <item>Hipotiroidismo</item>
        <item>Hipercolesterolemia</item>
        <item>Hipertermia</item>
        <item>Insuficiencia cardíaca</item>
        <item>Lupus</item>
        <item>Miastenia</item>
        <item>Neuropatía periférica</item>
        <item>Obesidad</item>
        <item>Osteoporosis</item>
        <item>Parkinson</item>
        <item>túnel carpiano</item>
        <item>fatiga crónica</item>
        <item>Síndrome de Tourette</item>
        <item>Síndrome de Wolff-Parkinson-White</item>
    </string-array>


    <!-- OPCIONES SUPLEMENTOS -->
    <string-array name="supplements">
        <item>Vitamina A</item>
        <item>Vitamina B1 (Tiamina)</item>
        <item>Vitamina B2 (Riboflavina)</item>
        <item>Vitamina B3 (Niacina)</item>
        <item>Vitamina B6 (Piridoxina)</item>
        <item>Vitamina B12</item>
        <item>Vitamina C</item>
        <item>Vitamina D</item>
        <item>Vitamina E</item>
        <item>Calcio</item>
        <item>Hierro</item>
        <item>Magnesio</item>
        <item>Zinc</item>
        <item>Omega-3 (Ácidos grasos)</item>
        <item>Coenzima Q10 (CoQ10)</item>
        <item>Fósforo</item>
        <item>Potasio</item>
        <item>Sodio</item>
        <item>Cloro</item>
        <item>Azufre</item>
        <item>Manganeso</item>
        <item>Cromo</item>
        <item>Molibdeno</item>
        <item>Cobalto</item>
        <item>Selenio</item>
        <item>Silicio</item>
        <item>Boro</item>
        <item>Vanadio</item>
        <item>Níquel</item>
        <item>Litio</item>
        <item>Proteina</item>
        <item>Creatina</item>
    </string-array>


    <!-- Strings dialog -->
    <string name="salad_title">Ensalada de \nverduras con atun</string>
    <string name="sandwich_title">Sandwich de \njamon de pavo</string>
    <string name="pasta_title">Pasta fusilli con \nsalsa de tomate</string>
    <string name="eggs_title">Huevos revueltos \ncon tocino</string>

    <string name="salad_description">Echo por una excelente conbinacion entre los mejores vegetales que pueden ayudarte a regular tus procesos estomacales y reducir tu ingensta de calorias</string>
    <string name="sandwich_description">Excelente fuente de proteina para tu dia ya que contiene tanto ptoteinas como el jamon y el peperoni como carbohidratos necesarios como el Pan blanco</string>
    <string name="pasta_description">Una gran fuente de carbohidratos gracias a la pasta ademas de contener otros ingredisntes ricos en proteinas como el queso que es de facil dogestion</string>
    <string name="eggs_description">Guevos revueltos con una porcion de tocino son una de las mejores formas de ingerir proteinas gracias a su gran contenido ademas de su porcion generoza de ensalada</string>

    <string name="salad_ingredients">Lechuga, Pepino, tomate, cebolla, atun</string>
    <string name="sandwich_ingredients">Pan balnco, jamon de pavo, peperoni, lechuga, tomate</string>
    <string name="pasta_ingredients">Pasta fusilli, salsa de tomate, brocoli, queso</string>
    <string name="eggs_ingredients">Huevos, tocino, pan integral, lechuga</string>

    <string name="salad_macros">Calorias: 89KCAL\nCarbohidratos: 30g\nProteina: 29g\nGrasas: 6g</string>
    <string name="sandwich_macros">Calorias: 225KCAL\nCarbohidratos: 150g\nProteina: 200g\nGrasas: 60g</string>
    <string name="pasta_macros">Calorias: 131KCAL\nCarbohidratos: 210g\nProteina: 15g\nGrasas: 30g</string>
    <string name="eggs_macros">Calorias: 148KCAL\nCarbohidratos: 100g\nProteina: 310g\nGrasas: 75g</string>

    <!-- MENU -->
    <string name="home">HOME</string>
    <string name="calorias">CALORIAS</string>
    <string name="actividad">ACTIVIDAD</string>
    <string name="perfil">PERFIL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>