<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-20dp"
            app:srcCompat="@drawable/wave2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            style="@style/PoppinsText"
            android:text="@string/banner"/>

        <TextView
            android:id="@+id/lb_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            style="@style/PoppinsText"
            android:text="@string/custom_banner"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lb_email"
            android:labelFor="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            style="@style/PoppinsText"
            android:text="@string/lb_email"/>

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_login"
            android:textColor="@color/black"
            android:textColorHint="#808080"
            android:padding="12dp" />

        <TextView
            android:id="@+id/lb_password"
            android:labelFor="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            style="@style/PoppinsText"
            android:text="@string/lb_password"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/edittext_login"
                android:textColorHint="#808080"
                android:padding="12dp" />

        <TextView
            android:id="@+id/lb_passwordWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/warning"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="15sp"
            android:layout_marginTop="7dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:text="@string/btn_submit"
            style="@style/PoppinsText"
            android:onClick="login"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/separatingline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/btn_google"
                android:src="@drawable/ic_google"/>

            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/btn_facebook"
                android:src="@drawable/ic_facebook"/>

            <ImageButton
                android:id="@+id/btn_apple"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/btn_apple"
                android:src="@drawable/ic_apple"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>